kubernetes/apps/default/paperless/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-external
  namespace: default
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "paperless.schloschi.com" # <-- Replace with your actual external domain
  rules:
    - backendRefs:
        - name: paperless
          port: 8080 # The default port for the Nextcloud service
